--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Hi, I'm Hien (Emi) Bui"
 ---
 
-# Welcome 👋  
+# Welcome 
 
 I’m a **Data Science master’s student (Drew University, expected 2026)** with a background in **Economics (B.A.) and minors in Mathematics & Asian Studies**.  
 Before transitioning into data, I spent **6+ years managing projects in VFX/animation** and client services—leading cross-functional teams, delivering for global clients, and honing communication and leadership skills.  
@@ -11,16 +11,17 @@ Today, I combine that creative and organizational background with **data science
 
 ---
 
-## 🔧 Technical Skills
+## Technical Skills
 - **Programming & Tools:** Python · R · SQL · Jupyter Notebook · VSCode  
 - **Visualization & BI:** Tableau · Power BI · Plotly · Data Wrangling  
 - **3D & Creative:** Maya · Blender · Substance Painter  
 - **Other:** Google Suite · Microsoft Office  
 
-## 🌟 Professional Strengths
+## Professional Strengths
 Project Management · Data Analysis · Data Visualization · Communication  
 Problem Solving · Teamwork · Critical Thinking · Research  
 
 ---
 
-👉 Check out my [Projects](projects/index.qmd), view my [Resume](resume.qmd), or connect via [LinkedIn](https://www.linkedin.com/in/hien-bui-emi-6273b010a/) / [GitHub](https://github.com/krisauw).
+Check out my [Projects](projects/index.qmd), view my [Resume](resume.qmd), or connect via  
+[LinkedIn](https://www.linkedin.com/in/hien-bui-emi-6273b010a/) · [GitHub](https://krisauw.github.io/website/)
