--- a/resume.qmd
+++ b/resume.qmd
@@ -5,10 +5,13 @@ page-layout: full
 ---
 
 <div style="margin:1rem 0;">
-  <a class="btn btn-primary" href="resume/Resume_HienBui.pdf" target="_blank" rel="noopener">
-    ⬇️ Download PDF Resume
+  <a class="btn btn-primary"
+     href="resume/Resume_HienBui.pdf"
+     target="_blank" rel="noopener" download>
+    Download PDF Resume
   </a>
 </div>
+
 
 <!-- Inline PDF viewer -->
 <object data="resume/Resume_HienBui.pdf" type="application/pdf" width="100%" height="1000px">
