--- a/contact.qmd
+++ b/contact.qmd
@@ -4,6 +4,5 @@ title: "Contact"
 
 I’m open to internships and collaborations.
 
-- [Email](mailto:hien.bui0393@gmail.com)  
-- [LinkedIn](https://www.linkedin.com/in/hien-bui-emi-6273b010a/)  
-- [GitHub](https://krisauw.github.io/website/)
+- [Email](mailto:hien.bui0393@gmail.com){target="_blank" rel="noopener"}  
+- [LinkedIn](https://www.linkedin.com/in/hien-bui-emi-6273b010a/){target="_blank" rel="noopener"}
